--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@
 
 Ezra Nobrega    <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Your Name      <Your email>
+Naod Kassahun      <Naodk36@gmail.com>
