--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega    <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Eden Birhan        <edenbirhan33@gmail.com>
 Naod Kassahun      <Naodk36@gmail.com>
